--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -21,10 +21,21 @@
     },
     "colab": {
       "name": "LS_DS_212_assignment.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Terrencebosco/DS-Unit-2-Linear-Models/blob/master/module2-regression-2/LS_DS_212_assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -111,7 +122,7 @@
         "import warnings\n",
         "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
       ],
-      "execution_count": 296,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -139,7 +150,7 @@
         "        (df['longitude'] >= np.percentile(df['longitude'], 0.05)) & \n",
         "        (df['longitude'] <= np.percentile(df['longitude'], 99.95))]"
       ],
-      "execution_count": 297,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -147,7 +158,11 @@
       "metadata": {
         "id": "A_m29FYYDm2v",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "a6d07914-6305-436c-f3db-a40ce0d37421"
       },
       "source": [
         "import pandas as pd\n",
@@ -160,8 +175,17 @@
         "from sklearn.metrics import mean_squared_error,r2_score\n",
         "from sklearn.preprocessing import OneHotEncoder"
       ],
-      "execution_count": 298,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -172,12 +196,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 501
         },
-        "outputId": "eb847416-8f8a-493c-b2f1-906f519408fc"
+        "outputId": "82d9d71d-b17a-4f19-b05c-a38f2766429a"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 299,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +465,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 299
+          "execution_count": 4
         }
       ]
     },
@@ -456,7 +480,7 @@
         "# change created to data time format for subsetting by month\n",
         "df['created'] = pd.to_datetime(df['created'])"
       ],
-      "execution_count": 300,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -470,7 +494,7 @@
         "# create column with month value\n",
         "df['month'] = df['created'].map(lambda x: x.month)"
       ],
-      "execution_count": 301,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -482,13 +506,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "4963835c-c045-4970-9b81-6c5d45b6879b"
+        "outputId": "9befdceb-e212-4ffd-cfe9-eca895df1cf1"
       },
       "source": [
         "# check\n",
         "df['month'].value_counts()"
       ],
-      "execution_count": 302,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -503,7 +527,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 302
+          "execution_count": 7
         }
       ]
     },
@@ -519,7 +543,7 @@
         "                                              'medium':2,\n",
         "                                              'low':1})"
       ],
-      "execution_count": 303,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -533,7 +557,7 @@
         "# create column for 'allows pets'\n",
         "df['pets'] = df['cats_allowed'] + df['dogs_allowed']"
       ],
-      "execution_count": 304,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -548,7 +572,7 @@
         "df['pets'] = df['pets'].mask(df['pets']==1,df['pets'].replace(1,0))\n",
         "df['pets'] = df['pets'].mask(df['pets']==2,df['pets'].replace(2,1))"
       ],
-      "execution_count": 305,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -562,7 +586,7 @@
         "# create column that show the total number of rooms.\n",
         "df['num_rooms'] = df['bedrooms'] + df['bathrooms']"
       ],
-      "execution_count": 306,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -575,7 +599,7 @@
       "source": [
         "df['perk'] = df.iloc[:,10:33].sum(axis=1)"
       ],
-      "execution_count": 307,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -591,7 +615,7 @@
         "train = df[df['month'].isin(train_months)]\n",
         "test = df[df['month'] == 6]"
       ],
-      "execution_count": 308,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -603,7 +627,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 101
         },
-        "outputId": "bd6e1666-5e92-44a4-b808-1e9ed58cbfdc"
+        "outputId": "d3508bdf-31a1-4a02-98ae-ccafcba0df81"
       },
       "source": [
         "# split data\n",
@@ -625,8 +649,10 @@
         "# create model \n",
         "model.fit(X_train, y_train)\n",
         "\n",
+        "# predict using the X_train data \n",
         "y_pred = model.predict(X_train)\n",
         "\n",
+        "# error scores\n",
         "mae = mean_absolute_error(y_train,y_pred)\n",
         "mse = mean_squared_error(y_train,y_pred)\n",
         "rmse = np.sqrt(mse)\n",
@@ -634,7 +660,7 @@
         "\n",
         "print(f'Training Set errors-\\nmean absolute error: {mae}\\nmean squared error: {mse}\\nRMSE: {rmse}\\nr2: {r2}')"
       ],
-      "execution_count": 309,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,38 +678,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C1dHR0XuC4tP",
+        "id": "oIYA9mufqHYV",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
         },
-        "outputId": "da7ff9a0-714f-4e0b-ec70-5de578c94362"
+        "outputId": "3a1f06c0-22a3-4dbe-dd6b-a2d75aaeebc6"
       },
       "source": [
-        "# run model on test set\n",
-        "\n",
-        "model.fit(X_test,y_test)\n",
-        "\n",
+        "# predict with the X_test set.\n",
         "y_pred = model.predict(X_test)\n",
-        "mean_absolute_error(y_test,y_pred)\n",
         "\n",
+        "# error scores\n",
         "mae = mean_absolute_error(y_test,y_pred)\n",
         "mse = mean_squared_error(y_test,y_pred)\n",
         "rmse = np.sqrt(mse)\n",
         "r2 = r2_score(y_test,y_pred)\n",
-        "print(f'Testing Set errors-\\nmean absolute error: {mae}\\nmean squared error: {mse}\\nRMSE: {rmse}\\nr2: {r2}')"
+        "\n",
+        "print(f'Training Set errors-\\nmean absolute error: {mae}\\nmean squared error: {mse}\\nRMSE: {rmse}\\nr2: {r2}')"
       ],
-      "execution_count": 310,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Training Set errors-\n",
-            "mean absolute error: 762.6757476781943\n",
-            "mean squared error: 1307275.6550474993\n",
-            "RMSE: 1143.3615591961711\n",
-            "r2: 0.5793865156042705\n"
+            "mean absolute error: 758.5662154341907\n",
+            "mean squared error: 1308760.991855213\n",
+            "RMSE: 1144.0109229614957\n",
+            "r2: 0.5789086112787508\n"
           ],
           "name": "stdout"
         }
