--- a/LS_DS_212_assignment.ipynb
+++ b/LS_DS_212_assignment.ipynb
@@ -123,7 +123,7 @@
         "import warnings\n",
         "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -149,9 +149,10 @@
         "        (df['latitude'] >= np.percentile(df['latitude'], 0.05)) & \n",
         "        (df['latitude'] < np.percentile(df['latitude'], 99.95)) &\n",
         "        (df['longitude'] >= np.percentile(df['longitude'], 0.05)) & \n",
-        "        (df['longitude'] <= np.percentile(df['longitude'], 99.95))]\n"
+        "        (df['longitude'] <= np.percentile(df['longitude'], 99.95))]\n",
+        "house =df.copy()"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -173,12 +174,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 487
         },
-        "outputId": "2f27836c-37e9-46f7-b4f1-62d01909ea69"
+        "outputId": "0a18a330-7d83-4578-8a4d-f1531db55b25"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,12 +456,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 683
         },
-        "outputId": "b0de74e7-47ed-4063-8bad-273abce076b0"
+        "outputId": "1f9b29bc-9246-4d4e-ba6e-56dc98971c31"
       },
       "source": [
         "df.info()"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,12 +521,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "3b48e9ca-2d1a-41c1-fc99-54bf64fb3b33"
+        "outputId": "c650a208-9123-47e8-d65f-18ffda7fb857"
       },
       "source": [
         "df.describe()"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -871,15 +872,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 33
         },
-        "outputId": "0312e862-68d1-4c1f-8dc3-f2a914750e6b"
+        "outputId": "e90d0399-7fd2-48ae-fb38-fedac9a29fd7"
       },
       "source": [
         "# y = target\n",
         "\n",
-        "y = apt['price']\n",
+        "y = house['price']\n",
         "y.shape"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,7 +892,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 24
         }
       ]
     },
@@ -904,15 +905,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 33
         },
-        "outputId": "8686da69-fab3-4a48-af95-8cb1a83b6d47"
+        "outputId": "882a54ad-b658-46bf-ade8-ea4eae162506"
       },
       "source": [
         "# X = features \n",
         "\n",
-        "X = apt.drop('price', axis=1)\n",
+        "X = house.drop('price', axis=1)\n",
         "X.shape"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -924,7 +925,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 25
         }
       ]
     },
@@ -937,12 +938,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 82
         },
-        "outputId": "1b52d916-6f50-41e7-80ea-bbb41c910cd4"
+        "outputId": "cec00fe0-02e2-41f4-cb1e-edfdbf3e8583"
       },
       "source": [
         "y.head(3)"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -957,7 +958,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 26
         }
       ]
     },
@@ -970,12 +971,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 316
         },
-        "outputId": "dbd5afa4-e9d7-4728-af9a-739cae1229ae"
+        "outputId": "76f3d905-d5bb-4d8b-a406-3e8f184390ae"
       },
       "source": [
         "X.head(3)"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1159,7 +1160,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 27
         }
       ]
     },
@@ -1186,7 +1187,7 @@
         "# test is for June\n",
         "test = df[df['created'].str.contains(\"2016-06\")]\n"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1210,7 +1211,7 @@
         "# Total Number of rooms\n",
         "X['rooms'] = X['bathrooms'] + X['bedrooms']"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1224,7 +1225,7 @@
         "# Total number of outdoor facilities\n",
         "X['out'] = X['balcony']+X['common_outdoor_space']+X['garden_patio']+X['outdoor_space']+X['terrace']+X['swimming_pool']+X['roof_deck']"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1236,12 +1237,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 487
         },
-        "outputId": "db900eba-9f15-4520-f152-7d7a49fa3768"
+        "outputId": "c8c1b8a2-fed1-468c-8d10-cce95aa08099"
       },
       "source": [
         "X.head()"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1511,7 +1512,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 31
         }
       ]
     },
@@ -1536,7 +1537,7 @@
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import mean_absolute_error"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1548,7 +1549,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "90daab8c-9efb-46cb-d7d4-d77d3fc2263d"
+        "outputId": "ee8329f3-7247-4c30-ebbf-f4c7eab2a555"
       },
       "source": [
         "# Instantiate the class\n",
@@ -1559,15 +1560,15 @@
         "print(f'Linear Regression, dependent on: {features}')\n",
         "print(f'Linear Regression, independent on: {target}')\n",
         "# Make train data\n",
-        "x_train = Train[features]\n",
-        "y_train = Train[target]\n",
+        "x_train = train[features]\n",
+        "y_train = train[target]\n",
         "# Make test data\n",
-        "x_test = Test[features]\n",
-        "y_test = Test[target]\n",
+        "x_test = test[features]\n",
+        "y_test = test[target]\n",
         "# Fit  the data to the model\n",
         "model_2f.fit(x_train, y_train)\n"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -1587,7 +1588,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 35
         }
       ]
     },
@@ -1600,7 +1601,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "dab56791-3ca3-4c69-b7f5-f8ce224b8266"
+        "outputId": "bdb2fa84-2218-49f0-9127-78d6105c7846"
       },
       "source": [
         "#test train data\n",
@@ -1615,7 +1616,7 @@
         "print(f'MAE Train Error off by ${mae_train:.2f}.')\n",
         "print(f'MAE Test Error off by ${mae_test:.2f}.')"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1646,13 +1647,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 66
         },
-        "outputId": "4266bba0-0cc8-4529-e943-02d9fc06e7eb"
+        "outputId": "7111d994-cfad-4800-e490-8d14832dddfc"
       },
       "source": [
         "# State the coefficients and the intercept\n",
         "model_2f.intercept_, model_2f.coef_"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1666,7 +1667,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 37
         }
       ]
     },
@@ -1679,7 +1680,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 98
         },
-        "outputId": "ff0cad96-7cdf-4f1c-f650-f181ac4db95a"
+        "outputId": "fb0114aa-91d2-4df7-d256-48a497734971"
       },
       "source": [
         "print('Intercept', model_2f.intercept_)\n",
@@ -1688,7 +1689,7 @@
         "\n",
         "# Should match with the above cell"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1724,7 +1725,7 @@
         "from sklearn.metrics import mean_squared_error\n",
         "from math import sqrt"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -1736,7 +1737,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "ea2f1a00-7243-446e-faaf-1f109f8af8e1"
+        "outputId": "ed09858b-f2f6-4549-a248-3fb45b388a4c"
       },
       "source": [
         "# RMSE\n",
@@ -1746,7 +1747,7 @@
         "rmse = sqrt(mean_squared_error(y_train, train_pred))\n",
         "print(f' root mean squared error train: {rmse}')"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -1767,7 +1768,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "c908db49-07cc-4a6c-e5e9-4a04e0eb3bdb"
+        "outputId": "060c7936-2a66-465f-b188-b8689f41b35d"
       },
       "source": [
         "# R2\n",
@@ -1777,7 +1778,7 @@
         "r2 = r2_score(y_train,train_pred)\n",
         "print(f' R2 score for train: {r2}')"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -1798,14 +1799,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "4388a94a-892e-4a26-bd58-a24a2b3a8d28"
+        "outputId": "56f18d36-49f2-4750-e2dc-5682aae1522c"
       },
       "source": [
         "# MAE\n",
         "print(f'train error: ${mae_train:.2f} off')\n",
         "print(f'test error: ${mae_test:.2f} off')"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
