--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -122,7 +122,7 @@
         "import warnings\n",
         "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
       ],
-      "execution_count": 1,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -150,7 +150,7 @@
         "        (df['longitude'] >= np.percentile(df['longitude'], 0.05)) & \n",
         "        (df['longitude'] <= np.percentile(df['longitude'], 99.95))]"
       ],
-      "execution_count": 2,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -158,11 +158,7 @@
       "metadata": {
         "id": "A_m29FYYDm2v",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        },
-        "outputId": "a6d07914-6305-436c-f3db-a40ce0d37421"
+        "colab": {}
       },
       "source": [
         "import pandas as pd\n",
@@ -175,17 +171,8 @@
         "from sklearn.metrics import mean_squared_error,r2_score\n",
         "from sklearn.preprocessing import OneHotEncoder"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 37,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -196,12 +183,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 501
         },
-        "outputId": "82d9d71d-b17a-4f19-b05c-a38f2766429a"
+        "outputId": "7873ca35-ce2b-4d9e-ff82-049b0b1a42e5"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -465,7 +452,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 38
         }
       ]
     },
@@ -480,7 +467,7 @@
         "# change created to data time format for subsetting by month\n",
         "df['created'] = pd.to_datetime(df['created'])"
       ],
-      "execution_count": 5,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -494,7 +481,7 @@
         "# create column with month value\n",
         "df['month'] = df['created'].map(lambda x: x.month)"
       ],
-      "execution_count": 6,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -506,13 +493,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "9befdceb-e212-4ffd-cfe9-eca895df1cf1"
+        "outputId": "edbc8222-cf58-47ad-a786-14c28635bd25"
       },
       "source": [
         "# check\n",
         "df['month'].value_counts()"
       ],
-      "execution_count": 7,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +514,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 41
         }
       ]
     },
@@ -543,7 +530,7 @@
         "                                              'medium':2,\n",
         "                                              'low':1})"
       ],
-      "execution_count": 8,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -557,7 +544,7 @@
         "# create column for 'allows pets'\n",
         "df['pets'] = df['cats_allowed'] + df['dogs_allowed']"
       ],
-      "execution_count": 9,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -572,7 +559,7 @@
         "df['pets'] = df['pets'].mask(df['pets']==1,df['pets'].replace(1,0))\n",
         "df['pets'] = df['pets'].mask(df['pets']==2,df['pets'].replace(2,1))"
       ],
-      "execution_count": 10,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -586,7 +573,7 @@
         "# create column that show the total number of rooms.\n",
         "df['num_rooms'] = df['bedrooms'] + df['bathrooms']"
       ],
-      "execution_count": 11,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -597,9 +584,9 @@
         "colab": {}
       },
       "source": [
-        "df['perk'] = df.iloc[:,10:33].sum(axis=1)"
+        "df['perk'] = df.iloc[:,10:34].sum(axis=1)"
       ],
-      "execution_count": 12,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -615,7 +602,7 @@
         "train = df[df['month'].isin(train_months)]\n",
         "test = df[df['month'] == 6]"
       ],
-      "execution_count": 13,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -627,7 +614,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 101
         },
-        "outputId": "d3508bdf-31a1-4a02-98ae-ccafcba0df81"
+        "outputId": "2dc34b65-a293-4852-f61c-397a7a314716"
       },
       "source": [
         "# split data\n",
@@ -660,16 +647,16 @@
         "\n",
         "print(f'Training Set errors-\\nmean absolute error: {mae}\\nmean squared error: {mse}\\nRMSE: {rmse}\\nr2: {r2}')"
       ],
-      "execution_count": 16,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Training Set errors-\n",
-            "mean absolute error: 761.2791365212676\n",
-            "mean squared error: 1347588.3295968391\n",
-            "RMSE: 1160.8567222516476\n",
-            "r2: 0.5659980409092564\n"
+            "mean absolute error: 761.3135548358599\n",
+            "mean squared error: 1347867.8792149276\n",
+            "RMSE: 1160.977122606181\n",
+            "r2: 0.5659080096443302\n"
           ],
           "name": "stdout"
         }
@@ -684,7 +671,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 101
         },
-        "outputId": "3a1f06c0-22a3-4dbe-dd6b-a2d75aaeebc6"
+        "outputId": "4018660d-4c0b-4f22-ce0c-edb6b0fc2fcd"
       },
       "source": [
         "# predict with the X_test set.\n",
@@ -696,18 +683,18 @@
         "rmse = np.sqrt(mse)\n",
         "r2 = r2_score(y_test,y_pred)\n",
         "\n",
-        "print(f'Training Set errors-\\nmean absolute error: {mae}\\nmean squared error: {mse}\\nRMSE: {rmse}\\nr2: {r2}')"
+        "print(f'Test Set errors-\\nmean absolute error: {mae}\\nmean squared error: {mse}\\nRMSE: {rmse}\\nr2: {r2}')"
       ],
-      "execution_count": 20,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Training Set errors-\n",
-            "mean absolute error: 758.5662154341907\n",
-            "mean squared error: 1308760.991855213\n",
-            "RMSE: 1144.0109229614957\n",
-            "r2: 0.5789086112787508\n"
+            "Test Set errors-\n",
+            "mean absolute error: 758.331909375908\n",
+            "mean squared error: 1308838.7985368888\n",
+            "RMSE: 1144.0449285482143\n",
+            "r2: 0.5788835771251946\n"
           ],
           "name": "stdout"
         }
