213 Ridge Regression Assignment/Notes

--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.3"
     },
     "colab": {
-      "name": "Jordan_Dondre_TL_Maggie_DS17_Assignment_213.ipynb",
+      "name": "Dondre' After Hours Study Session DS 213_Notes.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -102,7 +102,7 @@
         "import warnings\n",
         "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "    .astype(int)\n",
         ")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
         "\n",
         "df.head(20)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -730,7 +730,7 @@
       "source": [
         "df['BOROUGH'].dtype"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -758,7 +758,7 @@
         "# so convert it from a number to a string\n",
         "df['BOROUGH'] = df['BOROUGH'].astype(str)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -775,7 +775,7 @@
       "source": [
         "df['BOROUGH'].dtype"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,7 +808,7 @@
         "# replace the neighborhood with 'OTHER'\n",
         "df.loc[~df['NEIGHBORHOOD'].isin(top10), 'NEIGHBORHOOD'] = 'OTHER'"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -826,7 +826,7 @@
         "\n",
         "top10"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,7 +862,7 @@
         "df.describe()\n",
         "# Observe the numerical features"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1051,7 +1051,7 @@
       "source": [
         "\"\"\" There are sales prices\"\"\""
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1084,7 +1084,7 @@
       "source": [
         "df.info()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1142,7 +1142,7 @@
       "source": [
         "one_family = df.loc[df['BUILDING_CLASS_CATEGORY'] == '01 ONE FAMILY DWELLINGS']"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1155,7 +1155,7 @@
       "source": [
         "usable = one_family[(one_family.SALE_PRICE > 100000) & (one_family.SALE_PRICE < 2000000)]"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1172,7 +1172,7 @@
       "source": [
         "usable.sort_values(by=['SALE_PRICE'])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1545,7 +1545,7 @@
         "# & sale price was more than 100 thousand and less than 2 million.\n",
         "usable"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1902,7 +1902,7 @@
         "y = usable['SALE_PRICE']\n",
         "y.shape"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1935,7 +1935,7 @@
         "X = usable.drop('SALE_PRICE', axis=1)\n",
         "X.shape"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1967,7 +1967,7 @@
         "# Take a look at 'SALE_DATE'. \n",
         "# Convert format from object to datetime. "
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2019,7 +2019,7 @@
         "X['SALE_DATE'].dtype\n",
         "# What is the type of column 'SALE_DATE'?"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2053,7 +2053,7 @@
         "\n",
         "X.head(2)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2180,7 +2180,7 @@
         "X.info()\n",
         "# Verify again."
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2230,7 +2230,7 @@
         "X_train = X[(X['SALE_DATE'] > '2019-01-01') & (X['SALE_DATE'] < '2019-04-01')]\n",
         "y_train = y[y.index.isin(X_train.index)]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2249,7 +2249,7 @@
         "# Verify parameters w/ slicing.\n",
         "# This takes a look at the 'head' and 'tail' end of column 'SALE_DATE'"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2288,7 +2288,7 @@
         "X_test = X[(X['SALE_DATE'] > '2019-04-01') & (X['SALE_DATE'] < '2019-05-01')]\n",
         "y_test = y[y.index.isin(X_test.index)]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2323,7 +2323,7 @@
         "X_cat = X.describe(exclude='number')\n",
         "# Assign X_cat for all usable categorical features in X (DataFrame)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2336,7 +2336,7 @@
       "source": [
         "X_cat = X.describe(exclude='number')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2354,7 +2354,7 @@
         "# Let's look at relationships between categorical features.\n",
         "X_cat.info()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2395,7 +2395,7 @@
       "source": [
         "\"\"\"All object data types\"\"\""
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2439,7 +2439,7 @@
         "\n",
         "print(type(borough_train_trans), borough_train_trans.shape,'\\n' , borough_train_trans)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2486,7 +2486,7 @@
         "      'Neighborhood after OneHotEncoder Transformation :', '\\n',\n",
         "      neighborhood_train_trans)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2520,7 +2520,7 @@
       "source": [
         "X_train['NEIGHBORHOOD'].value_counts()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2570,7 +2570,7 @@
         "      'Building Class Category after OneHotEncoder Transformation :', '\\n',\n",
         "      buildingclasscat_train_trans)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2604,7 +2604,7 @@
       "source": [
         "print('This is why the above cell has only \"1\" :', '\\n',X_train['BUILDING_CLASS_CATEGORY'])"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2655,7 +2655,7 @@
         "      'Tax Class at Present after OneHotEncoder Transformation :', '\\n',\n",
         "      taxclasspresent_train_trans)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2689,7 +2689,7 @@
       "source": [
         "print('Value Counts for Tax Class at present :', '\\n', X_train['TAX_CLASS_AT_PRESENT'].value_counts())"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2731,7 +2731,7 @@
         "      'Building Class at Present after OneHotEncoder Transformation :', '\\n',\n",
         "      buildingclasspresent_train_trans)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2779,7 +2779,7 @@
         "      'Address after OneHotEncoder Transformation:', '\\n',\n",
         "      buildingclasspresent_train_trans)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2827,7 +2827,7 @@
         "      'Apartment number after OneHotEncoder Transformation:', '\\n',\n",
         "      aptnum_train_trans)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2861,7 +2861,7 @@
       "source": [
         "X_train.drop('APARTMENT_NUMBER', inplace=True, axis=1)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2890,7 +2890,7 @@
       "source": [
         "print('Apartment Number column dropped since it contains Nan values.','\\n','\\n',X_train.columns)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2937,7 +2937,7 @@
         "      'Land Square Feet after OneHotEncoder Transformation:', '\\n',\n",
         "      landsqfeet_train_trans)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2972,7 +2972,7 @@
         "print('High Cardinality (Length:886) :','\\n',X_train['LAND_SQUARE_FEET'].value_counts())\n",
         "#886 different values for Land Square Feet. \n"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3023,7 +3023,7 @@
         "      'Building Class at time of Sale after OneHotEncoder Transformation:', '\\n',\n",
         "      buildclassattimeofsale_train_trans)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3057,7 +3057,7 @@
       "source": [
         "X_train['BUILDING_CLASS_AT_TIME_OF_SALE'].value_counts()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3112,7 +3112,7 @@
         "      'Sale Date after OneHotEncoder Transformation:', '\\n',\n",
         "      saledate_train_trans)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3146,7 +3146,7 @@
       "source": [
         "print('High Cardinality (Length:67) :','\\n','\\n',X_train['SALE_DATE'].value_counts())"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3202,7 +3202,7 @@
         "n = len(features)\n",
         "print(f'Number of features: {n:,.0f}')"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3234,7 +3234,7 @@
         "combinations = sum(n_choose_k(n,k) for k in range(1,n+1))\n",
         "print(f'Every possible combination of \"features\" : {combinations:,.0f}')"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3264,7 +3264,7 @@
         "X_train_select = X_train.select_dtypes(include='number')\n",
         "X_test_select = X_test.select_dtypes(include='number')"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3293,7 +3293,7 @@
       "source": [
         "X_train['BUILDING_CLASS_CATEGORY'].value_counts()"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3340,7 +3340,7 @@
         "X_test_selected = selector.transform(X_test)\n",
         "X_train_selected.shape, X_test_selected.shape\n"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -3387,7 +3387,7 @@
         "for name in unselected_names:\n",
         "    print(name)"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -3442,7 +3442,7 @@
         "    mae = mean_absolute_error(y_test, y_pred)\n",
         "    print(f'Test MAE: ${mae:,.0f} \\n')"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3490,7 +3490,7 @@
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import mean_absolute_error"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3507,7 +3507,7 @@
       "source": [
         "print(features)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3552,7 +3552,7 @@
         "# Fit  the data to the model\n",
         "model_feat.fit(x_train, y_train)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3613,7 +3613,7 @@
         "from sklearn.metrics import mean_squared_error\n",
         "from math import sqrt"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3642,7 +3642,7 @@
         "print(f'MAE Train Error off by ${mae_train:.2f}.')\n",
         "print(f'MAE Test Error off by ${mae_test:.2f}.')"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -3690,6 +3690,17 @@
         "- [ ] Try [statsmodels](https://www.statsmodels.org/stable/index.html) if you’re interested in more inferential statistical approach to linear regression and feature selection, looking at p values and 95% confidence intervals for the coefficients.\n",
         "- [ ] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapters 1-3, for more math & theory, but in an accessible, readable way.\n",
         "- [ ] Try [scikit-learn pipelines](https://scikit-learn.org/stable/modules/compose.html)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9meQe0CWJMX2",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Dondre' After Hours Study Session DS 211 Notes\n",
+        "Instructor:____________________"
       ]
     }
   ]
