--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -20,8 +20,12 @@
       "version": "3.7.3"
     },
     "colab": {
-      "name": "Jordan_Dondre_TL_Maggie_DS17_Assignment_214.ipynb",
+      "name": "Dondre' After Hours Study Session DS 212_Notes.ipynb",
       "provenance": [],
+      "collapsed_sections": [
+        "tW9pCD2zFcv3",
+        "ehPHZW4MEpM5"
+      ],
       "include_colab_link": true
     }
   },
@@ -104,7 +108,7 @@
         "else:\n",
         "    DATA_PATH = '../data/'"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +123,7 @@
         "import pandas as pd\n",
         "df = pd.read_csv(DATA_PATH+'burritos/burritos.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +141,7 @@
         "df = df.dropna(subset=['overall'])\n",
         "df['Great'] = df['overall'] >= 4"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +166,7 @@
         "df.loc[carnitas, 'Burrito'] = 'Carnitas'\n",
         "df.loc[~california & ~asada & ~surf & ~carnitas, 'Burrito'] = 'Other'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +180,7 @@
         "# Drop some high cardinality categoricals\n",
         "df = df.drop(columns=['Notes', 'Location', 'Reviewer', 'Address', 'URL', 'Neighborhood'])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +194,7 @@
         "# Drop some columns to prevent \"leakage\"\n",
         "df = df.drop(columns=['Rec', 'overall'])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +211,7 @@
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +300,7 @@
       "source": [
         "df.columns"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,7 +346,7 @@
         "            'Egg', 'Mushroom', 'Bacon', \n",
         "            'Sushi', 'Avocado', 'Corn', 'Zucchini']"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -356,7 +360,7 @@
         "for c in columns:\n",
         "  df[c] = df[c].str.replace('x', '1', case=False).astype(float)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -370,7 +374,7 @@
         "for c in columns:\n",
         "  df[c] = df[c].fillna(0)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -394,7 +398,7 @@
         "#Import\n",
         "import datetime as dt"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +418,7 @@
         "print(df.shape)\n",
         "df.head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,7 +863,7 @@
       "source": [
         "df['Beef'].value_counts()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -901,7 +905,7 @@
         "\n",
         "# The sum of indeces of the shape of train, val, test == 421 == to auto_df.shape "
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -943,7 +947,7 @@
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.impute import SimpleImputer"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -971,7 +975,7 @@
         "y_train = train[target]\n",
         "y_train.value_counts(normalize=True)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1003,7 +1007,7 @@
       "source": [
         "'''Beat 0.59 for an accuracy score.'''"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,7 +1042,7 @@
         "X_test = test[features]\n",
         "y_test = test[target]"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1052,7 +1056,7 @@
         "# Check that training and validation contain all observations from X\n",
         "assert df.shape[0] == X_train.shape[0] + X_val.shape[0] + X_test.shape[0]"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1069,7 +1073,7 @@
       "source": [
         "X_train.shape, y_train.shape, X_val.shape, y_val.shape, X_test.shape, y_test.shape"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1109,7 +1113,7 @@
       "source": [
         "train"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1932,7 +1936,7 @@
       "source": [
         "test"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4482,7 +4486,7 @@
       "source": [
         "test['Great'] = (test['Great'] == True ).astype(int)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4512,7 +4516,7 @@
       "source": [
         "train.isnull().sum()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4611,7 +4615,7 @@
         "# Separate labels from feature matrix\n",
         "y = test.pop('Great')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4640,7 +4644,7 @@
       "source": [
         "X.shape, y.shape"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4680,7 +4684,7 @@
         "# Check that training and validation contain all observations from X\n",
         "assert X.shape[0] == X__train.shape[0] + X_val.shape[0]"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -4947,6 +4951,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lDmqMn6dJT7t",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Dondre' After Hours Study Session DS 211 Notes\n",
+        "Instructor:____________________"
+      ]
     }
   ]
 }
