--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -271,6 +271,47 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "OFt0ZqQbAcr6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from category_encoders import OneHotEncoder\n",
+        "encoder = OneHotEncoder( use_cat_names=True )"
+      ],
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nVSmAuzdB1-y",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train = encoder.fit_transform(train)\n",
+        "test = encoder.transform(test)"
+      ],
+      "execution_count": 84,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b9NoMTaiIeSN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def feature_maker()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "4NfuSSjdFSnm",
         "colab_type": "code",
         "colab": {}
@@ -298,68 +339,6 @@
       ],
       "execution_count": 83,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "crABGVEsBzzl",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "OFt0ZqQbAcr6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from category_encoders import OneHotEncoder\n",
-        "encoder = OneHotEncoder( use_cat_names=True )"
-      ],
-      "execution_count": 66,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nVSmAuzdB1-y",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "X_train = encoder.fit_transform(X_train)\n",
-        "X_test = encoder.transform(X_test)"
-      ],
-      "execution_count": 84,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "edzc_7s6DUnj",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "\n",
-        "---\n",
-        "\n"
-      ]
     },
     {
       "cell_type": "code",
