--- a/module3-ridge-regression/SW_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/SW_DS_213_assignment.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "SW_DS_213_assignment.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -1360,60 +1361,6 @@
           "execution_count": 17
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wA7aXi_ep2sH",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# #define features and target\n",
-        "# # short list\n",
-        "\n",
-        "# target = 'SALE_PRICE'\n",
-        "\n",
-        "# # identify high cardinality and extranous columns\n",
-        "# # tax class at present is 99% the one option and 1% the other\n",
-        "\n",
-        "# extraneous = ['EASE-MENT','BUILDING_CLASS_CATEGORY','APARTMENT_NUMBER','TAX_CLASS_AT_TIME_OF_SALE','RESIDENTIAL_UNITS', 'TAX_CLASS_AT_PRESENT','SALE_DATE']\n",
-        "\n",
-        "# high_cardinality = ['ADDRESS','BUILDING_CLASS_AT_PRESENT','BUILDING_CLASS_AT_TIME_OF_SALE']\n",
-        "\n",
-        "# features = df.columns.drop([target] + extraneous + high_cardinality)\n",
-        "\n",
-        "# features"
-      ],
-      "execution_count": 18,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "uZ48na8AeLKc",
-        "colab": {}
-      },
-      "source": [
-        "# #define features and target\n",
-        "# target = 'SALE_PRICE'\n",
-        "\n",
-        "# # identify high cardinality and extranous columns\n",
-        "# # tax class at present is 99% the one option and 1% the other\n",
-        "# # 'RESIDENTIAL_UNITS', 'TAX_CLASS_AT_PRESENT','BUILDING_CLASS_AT_TIME_OF_SALE'\n",
-        "\n",
-        "\n",
-        "# extraneous = ['EASE-MENT','BUILDING_CLASS_CATEGORY','APARTMENT_NUMBER','TAX_CLASS_AT_TIME_OF_SALE','SALE_DATE']\n",
-        "\n",
-        "# high_cardinality = ['ADDRESS','BUILDING_CLASS_AT_PRESENT']\n",
-        "\n",
-        "# features = df.columns.drop([target] + extraneous + high_cardinality)\n",
-        "\n",
-        "# features"
-      ],
-      "execution_count": 19,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2793,6 +2740,109 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gmt5fe1Js3ic",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "36d3f47d-b8ac-4efc-f7fe-94db38100999"
+      },
+      "source": [
+        "# Ridge regression\n",
+        "\n",
+        "from sklearn.linear_model import Ridge\n",
+        "for alpha in [0.001, 0.01, 0.1, 1.0, 1, 100.0, 1000.0]:\n",
+        "  model = Ridge (alpha=alpha, normalize = True)\n",
+        "  model.fit(X_train, y_train)\n",
+        "  y_pred = model.predict(X_test)\n",
+        "  alpha=alpha\n",
+        "# Get linear equation\n",
+        "  m = model.coef_.round(2)\n",
+        "  b = model.intercept_.round(2)\n",
+        "  mae = mean_absolute_error(y_test, y_pred)\n",
+        "\n",
+        "  print(f'alpha={alpha}, mae:{mae:.0f}')"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "alpha=0.001, mae:154898\n",
+            "alpha=0.01, mae:154500\n",
+            "alpha=0.1, mae:153815\n",
+            "alpha=1.0, mae:167591\n",
+            "alpha=1, mae:167591\n",
+            "alpha=100.0, mae:209979\n",
+            "alpha=1000.0, mae:211401\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Al8YiM_buDmD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "c72a3791-5ea9-48fb-8318-c10e92600659"
+      },
+      "source": [
+        "# Refine farther\n",
+        "# alpha = 0.08, mae $153,748 is the best, which does not beat the non-ridge linear model\n",
+        "\n",
+        "for alpha in [0.01, 0.02,0.03,0.04,0.05,0.06,0.07,0.08,0.09]:\n",
+        "  model = Ridge (alpha=alpha, normalize = True)\n",
+        "  model.fit(X_train, y_train)\n",
+        "  y_pred = model.predict(X_test)\n",
+        "  alpha=alpha\n",
+        "# Get linear equation\n",
+        "  m = model.coef_.round(2)\n",
+        "  b = model.intercept_.round(2)\n",
+        "  mae = mean_absolute_error(y_test, y_pred)\n",
+        "\n",
+        "  print(f'alpha={alpha}, mae:{mae:.0f}')"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "alpha=0.01, mae:154500\n",
+            "alpha=0.02, mae:154270\n",
+            "alpha=0.03, mae:154107\n",
+            "alpha=0.04, mae:153967\n",
+            "alpha=0.05, mae:153858\n",
+            "alpha=0.06, mae:153795\n",
+            "alpha=0.07, mae:153763\n",
+            "alpha=0.08, mae:153748\n",
+            "alpha=0.09, mae:153772\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RsBd-mLguMUQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
